<resources>
    <string name="app_name">Quiz App</string>
    <string name="quizname">quiz</string>
    <string name="quizname2">App</string>
    <string name="user">  username</string>
    <string name="createacount">"don't have account? Create account"</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mLogin">already have an account? Login</string>
    <string name="forgotlock">forget password?</string>
    <string name="reset">Reset your</string>
    <string name="pasvord">password</string>
    <string name="request">Request an email reset link</string>
    <string name="adress">Email address</string>
    <string name="send">Send link</string>
    <string name="registerornot">Not registered?</string>
    <string name="signigiup"><u>Sign up</u></string>
    <string name="emailerror">Email is required</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="hello">Hello,</string>
    <string name="level">Lv.</string>
    <string name="popular">Choose Your</string>
    <string name="catorgy">Category</string>
    <string name="film">Films</string>
    <string name="quiz">Quiz</string>
    <string name="videogames">Video games</string>
    <string name="entermainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="math">Mathematics</string>
    <string name="book">Books</string>
    <string name="nature">Nature</string>
    <string name="emailunderline"><u>infoquizapp2021@gmail.com</u></string>
    <string name="computer">Computers</string>
    <string name="politics">Politics</string>
    <string name="music">Musics</string>
    <string name="animal">Animals</string>
    <string name="history">History</string>
    <string name="vehicles">Vehicles</string>
    <string name="mythology">Mythology</string>
    <string name="sport">Sports</string>
    <string name="boards">Board games</string>
    <string name="television">Television</string>
    <string name="geo">Geography</string>
    <string name="withtime">With Time</string>
    <string name="select">Selected</string>
    <string name="withouttime">No Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="thirty">30 s</string>
    <string name="viertel">45 s</string>
    <string name="sixty">60 s</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="japanese">Anime</string>
    <string name="general">General Quiz</string>
    <string name="next">Next</string>
    <string name="profile">"    Profile"</string>
    <string name="introduction">"    Instruction"</string>
    <string name="share">"    Share"</string>
    <string name="navigation_open_drawer">Open</string>
    <string name="navigation_close_drawer">Close</string>
    <string name="rate">Rate us</string>
    <string name="contact">"    Contact us"</string>
    <string name="leaderboard">"    Leaderboard"</string>
    <string name="statics">"    Statistics"</string>
    <string name="settings">"    Settings"</string>
    <string name="logout">"    Log out"</string>
</resources>