<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/dialogbackground"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/reset"
                android:textSize="35sp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#32096A"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:textStyle="bold"
                android:text="@string/pasvord"
                android:textSize="36sp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#32096A"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#9932096A"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailresetpassword"
            android:layout_marginTop="35dp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:background="@drawable/dialogedittextbaxcground"
            android:layout_marginRight="30dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:drawableRight="@drawable/dialogemail"
            android:textColorHint="#80BB86FC"
            android:hint="@string/adress"/>
        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#8043A047"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/send"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerornot"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#9932096A"/>
            <TextView
                android:id="@+id/dialogreturnregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signigiup"
                android:layout_marginLeft="3dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#9932096A"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>